[gd_scene load_steps=2 format=3 uid="uid://opn32q86e43y"]

[ext_resource type="Script" path="res://config.gd" id="1_57nsb"]

[node name="Config" type="Node2D"]
script = ExtResource("1_57nsb")

[node name="paralax" type="CheckButton" parent="."]
offset_right = 44.0
offset_bottom = 24.0
text = "paralax"

[node name="background_movement" type="CheckButton" parent="."]
offset_left = 1.0
offset_top = 32.0
offset_right = 107.0
offset_bottom = 63.0
text = "move"

[node name="background_animations" type="CheckButton" parent="."]
offset_top = 61.0
offset_right = 106.0
offset_bottom = 92.0
text = "aniamtions"

[connection signal="toggled" from="paralax" to="." method="_on_paralax_toggled"]
[connection signal="toggled" from="background_movement" to="." method="_on_background_movement_toggled"]
[connection signal="toggled" from="background_animations" to="." method="_on_background_animations_toggled"]
